- in image directory, move assignment thumbnails to project subdirectories. - instead of original GA-FEWD homework repo, link assignment code to GitHub Pages repo. - added Spotify API text.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Web Work & Code Samples | Damon Sauve</title>
+    <title>Web Portfolio | Damon Sauve</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
@@ -14,7 +14,7 @@
 
     <div class="row">
         <div class="col-md-12 level-1 border">
-            <h2>Web Work & Code Samples</h2>
+            <h2>Web Portfolio</h2>
             <h3>Damon Sauve</h3>
         </div>
     </div>
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="col-md-12 level-2 border">
             <h4>Front-End Web Developer Coursework</h4>
-            <p>Selected Assignments, August &#151; November 2015</p>
+            <p>August &#151; November 2015</p>
             <h5>General Assembly, San Francisco</h5>
         </div>
     </div>
@@ -31,7 +31,7 @@
         <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-sm-5 border">
-                    <a href="/ga-fewd35/01-resume_exercise/" target="_blank"><img src="img/01-resume_exercise.png" class="shadow"></a>
+                    <a href="/ga-fewd35/01-resume_exercise/" target="_blank"><img src="img/ga-fewd35/01-resume_exercise.png" class="shadow"></a>
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Resume Exercise</h4>
@@ -43,7 +43,7 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_02_css_basics/resume_exercise" target="_blank">GitHub Code</a></dd>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/01-resume_exercise" target="_blank">GitHub Code</a></dd>
                         <dd><a href="/ga-fewd35/01-resume_exercise/" target="_blank">Live Version</a></dd>
                         <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/01-resume_exercise/mox" target="_blank">Mock-up</a></dd>
                     </dl>
@@ -53,7 +53,7 @@
         <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-sm-5 border">
-                    <a href="/ga-fewd35/02-fashion_blog/" target="_blank"><img src="img/02-fashion_blog.png" class="shadow"></a>
+                    <a href="/ga-fewd35/02-fashion_blog/" target="_blank"><img src="img/ga-fewd35/02-fashion_blog.png" class="shadow"></a>
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Fashion Blog</h4>
@@ -65,7 +65,7 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_03_more_layout/fashion_blog" target="_blank">GitHub Code</a>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/02-fashion_blog" target="_blank">GitHub Code</a>
                         <dd><a href="/ga-fewd35/02-fashion_blog/" target="_blank">Live Version</a></dd>
                         <dd><a href="https://github.com/damonsauve/damonsauve.github.io/blob/master/ga-fewd35/02-fashion_blog/mox/fashion_blog_2.png" target="_blank">Mock-up</a></dd>
                     </dl>
@@ -77,7 +77,7 @@
         <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-sm-5 border">
-                    <a href="/ga-fewd35/03-bootstrap_off_canvas_clone/" target="_blank"><img src="img/03-bootstrap_off_canvas_clone.png" class="shadow"></a>
+                    <a href="/ga-fewd35/03-bootstrap_off_canvas_clone/" target="_blank"><img src="img/ga-fewd35/03-bootstrap_off_canvas_clone.png" class="shadow"></a>
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Bootstrap Off-Canvas Clone</h4>
@@ -90,7 +90,7 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_04_advanced_layout/bootstrap_off_canvas_template" target="_blank">GitHub Code</a>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/03-bootstrap_off_canvas_clone" target="_blank">GitHub Code</a>
                         <dd><a href="/ga-fewd35/03-bootstrap_off_canvas_clone/" target="_blank">Live Version</a></dd>
                     </dl>
                 </div>
@@ -99,7 +99,7 @@
         <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-sm-5 border">
-                    <a href="/ga-fewd35/04-score_keeper/" target="_blank"><img src="img/04-score_keeper.png" class="shadow"></a>
+                    <a href="/ga-fewd35/04-score_keeper/" target="_blank"><img src="img/ga-fewd35/04-score_keeper.png" class="shadow"></a>
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Score Keeper</h4>
@@ -111,7 +111,7 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_05_js_intro/09_dom_manipulation/score_keeper_html" target="_blank">GitHub Code</a></dd>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/04-score_keeper" target="_blank">GitHub Code</a></dd>
                         <dd><a href="/ga-fewd35/04-score_keeper/" target="_blank">Live Version</a></dd>
                     </dl>
                 </div>
@@ -119,10 +119,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 project-cell border">
+        <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-sm-5 border">
-                    <a href="/ga-fewd35/05-tic_tac_toe/" target="_blank"><img src="img/05-tic_tac_toe.png" class="shadow"></a>
+                    <a href="/ga-fewd35/05-tic_tac_toe/" target="_blank"><img src="img/ga-fewd35/05-tic_tac_toe.png" class="shadow"></a>
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Tic Tac Toe</h4>
@@ -134,16 +134,16 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_06_jquery_intro/10_jquery_intro/TicTacToe" target="_blank">GitHub Code</a></dd>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/05-tic_tac_toe" target="_blank">GitHub Code</a></dd>
                         <dd><a href="/ga-fewd35/05-tic_tac_toe/" target="_blank">Live Version</a></dd>
                     </dl>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 project-cell border">
+        <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-sm-5 border">
-                    <a href="/ga-fewd35/06-divided_times/" target="_blank"><img src="img/06-divided_times.png" class="shadow"></a>
+                    <a href="/ga-fewd35/06-divided_times/" target="_blank"><img src="img/ga-fewd35/06-divided_times.png" class="shadow"></a>
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Divided Times</h4>
@@ -155,7 +155,7 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_06_jquery_intro/11_jquery_review/divided_times" target="_blank">GitHub Code</a>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/06-divided_times" target="_blank">GitHub Code</a>
                         <dd><a href="/ga-fewd35/06-divided_times/" target="_blank">Live Version</a></dd>
                     </dl>
                 </div>
@@ -163,10 +163,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 project-cell border">
+        <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-sm-5 border">
-                    <a href="/ga-fewd35/07-amazon_wish_list/" target="_blank"><img src="img/07-amazon_wish_list.png" class="shadow"></a>
+                    <a href="/ga-fewd35/07-amazon_wish_list/" target="_blank"><img src="img/ga-fewd35/07-amazon_wish_list.png" class="shadow"></a>
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Amazon Wish List</h4>
@@ -178,20 +178,20 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_07_advanced_css_and_jquery/12_jquery_bootstrap/OrganizeMe!" target="_blank">GitHub Code</a>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/07-amazon_wish_list" target="_blank">GitHub Code</a>
                         <dd><a href="/ga-fewd35/07-amazon_wish_list/" target="_blank">Live Version</a></dd>
                     </dl>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 project-cell border">
+        <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-sm-5 border">
-                    <a href="/ga-fewd35/08-responsive_header_redesign/" target="_blank"><img src="img/08-responsive_header_redesign.png" class="shadow"></a>
+                    <a href="/ga-fewd35/08-responsive_header_redesign/" target="_blank"><img src="img/ga-fewd35/08-responsive_header_redesign.png" class="shadow"></a>
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Responsive Header Redesign</h4>
-                    <p>Using jQuery, redesign existing navigation menu for mobile devices.</p>
+                    <p>Using jQuery, transform existing navigation menu for mobile devices.</p>
                     <dl>
                         <dt>Objectives</dt>
                         <dd>Trigger responsive jQuery functions via a small-screen media query that changes a CSS property.</dd>
@@ -199,7 +199,7 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_07_advanced_css_and_jquery/13_css_trickshots/header_redesign" target="_blank">GitHub Code</a>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/08-responsive_header_redesign" target="_blank">GitHub Code</a>
                         <dd><a href="/ga-fewd35/08-responsive_header_redesign/" target="_blank">Live Version</a></dd>
                     </dl>
                 </div>
@@ -207,10 +207,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 project-cell border">
+        <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-sm-5 border">
-                    <a href="/ga-fewd35/09-my_form/" target="_blank"><img src="img/09-my_form.png" class="shadow"></a>
+                    <a href="/ga-fewd35/09-my_form/" target="_blank"><img src="img/ga-fewd35/09-my_form.png" class="shadow"></a>
                 </div>
                 <div class="col-sm-7 border">
                     <h4>My Form</h4>
@@ -222,16 +222,16 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_08_forms_and_ajax/14_forms/my_form" target="_blank">GitHub Code</a>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/09-my_form" target="_blank">GitHub Code</a>
                         <dd><a href="/ga-fewd35/09-my_form/" target="_blank">Live Version</a></dd>
                     </dl>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 project-cell border">
+        <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-sm-5 border">
-                    <a href="/ga-fewd35/10-wine_api_app/" target="_blank"><img src="img/10-wine_api_app.png" class="shadow"></a>
+                    <a href="/ga-fewd35/10-wine_api_app/" target="_blank"><img src="img/ga-fewd35/10-wine_api_app.png" class="shadow"></a>
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Wine API App</h4>
@@ -243,7 +243,7 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_08_forms_and_ajax/15_ajax/wine_app" target="_blank">GitHub Code</a>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/10-wine_api_app" target="_blank">GitHub Code</a>
                         <dd><a href="/ga-fewd35/10-wine_api_app/" target="_blank">Live Version</a></dd>
                     </dl>
                 </div>
@@ -251,10 +251,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 project-cell border">
+        <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-sm-5 border">
-                    <a href="/ga-fewd35/11-omdb_api_search/" target="_blank"><img src="img/11-omdb_api_search.png" class="shadow"></a>
+                    <a href="/ga-fewd35/11-omdb_api_search/" target="_blank"><img src="img/ga-fewd35/11-omdb_api_search.png" class="shadow"></a>
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Open Music Database (OMDB) API Search</h4>
@@ -266,28 +266,29 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_09_apis_and_templating/16_templating/omdb_title_search" target="_blank">GitHub Code</a>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/11-omdb_api_search" target="_blank">GitHub Code</a>
                         <dd><a href="/ga-fewd35/11-omdb_api_search/" target="_blank">Live Version</a></dd>
                     </dl>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 project-cell border">
+        <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-sm-5 border">
-                    <a href="/ga-fewd35/12-spotify_api_search/" target="_blank"><img src="img/12-spotify_api_search.png" class="shadow"></a>
+                    <a href="/ga-fewd35/12-spotify_api_search/" target="_blank"><img src="img/ga-fewd35/12-spotify_api_search.png" class="shadow"></a>
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Spotify API Search</h4>
-                    <p>Stuff about project.</p>
+                    <p>Using jQuery/Ajax, query the <a href="https://developer.spotify.com/web-api/" target="_blank">Spotify Web API</a> by keyword and return related tracks.</p>
                     <dl>
                         <dt>Objectives</dt>
-                        <dd></dd>
-                        <dd></dd>
+                        <dd>Display results with simple Handlebars template.</dd>
+                        <dd>Paginate through results using JavaScript.</dd>
+                        <dd>Enable in-browser audio preview using HTML5.</dd>
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_10_student_choice/18_spotify_api/spotify_api_search" target="_blank">GitHub Code</a>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/12-spotify_api_search" target="_blank">GitHub Code</a>
                         <dd><a href="/ga-fewd35/12-spotify_api_search/" target="_blank">Live Version</a></dd>
                     </dl>
                 </div>
@@ -296,7 +297,7 @@
     </div>
 
     <div class="row">
-        <div class="col-md-12 level-1 border">
+        <div class="col-md-12 level-1 footer-row">
             &copy; 2016 <a href="https://github.com/damonsauve">Damon Sauve</a></div>
         </div>
     </div>
