- rename mock-up dir for My Form assignment. - add My Form assignment. - add <code> tag to explicit code text. - some footer tweaks.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <dl>
                         <dt>Objectives</dt>
                         <dd>For click events, use jQuery to toggle an 'active' class to show/hide menu items.</dd>
-                        <dd>Use jQuery slideUp/slideDown methods to animate navigation menu.</dd>
+                        <dd>Use jQuery <code>slideUp</code>/<code>slideDown</code> methods to animate navigation menu.</dd>
                     </dl>
                     <dl>
                         <dt>Links</dt>
@@ -214,16 +214,18 @@
                 </div>
                 <div class="col-sm-7 border">
                     <h4>My Form</h4>
-                    <p>Stuff about project.</p>
+                    <p>Build simple HTML form from PNG mock-up with basic field validation.</p>
                     <dl>
                         <dt>Objectives</dt>
-                        <dd></dd>
-                        <dd></dd>
+                        <dd>Use Bootstrap's <code>form-control</code> class to standardize form field appearance.</dd>
+                        <dd>Access form fields using jQuery's <code>.val()</code> function.</dd>
+                        <dd>Show error message for invalid form fields.</dd>
                     </dl>
                     <dl>
                         <dt>Links</dt>
                         <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/09-my_form" target="_blank">GitHub Code</a>
                         <dd><a href="/ga-fewd35/09-my_form/" target="_blank">Live Version</a></dd>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/blob/master/ga-fewd35/09-my_form/mox/html_form.png" target="_blank">Mock-up</a></dd>
                     </dl>
                 </div>
             </div>
@@ -298,7 +300,7 @@
 
     <div class="row">
         <div class="col-md-12 level-1 footer-row">
-            &copy; 2016 <a href="https://github.com/damonsauve">Damon Sauve</a></div>
+            damonsauve @ GitHub: <a href="https://github.com/damonsauve/damonsauve.github.io">Pages Repo</a> | <a href="https://github.com/damonsauve">Main Repos</a>
         </div>
     </div>
 
