- add Wine API assignment

--- a/index.html
+++ b/index.html
@@ -237,11 +237,12 @@
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Wine API App</h4>
-                    <p>Stuff about project.</p>
+                    <p>Using jQuery/Ajax, use the Wine API to add a new wine to the database. Note: As of February 2016, the Wine API was inaccessible.</p>
                     <dl>
                         <dt>Objectives</dt>
-                        <dd></dd>
-                        <dd></dd>
+                        <dd>Dynamically generate the select list for year field using a JavaScript and jQuery.</dd>
+                        <dd>On submit, validate the form and show error messaging for invalid fields.</dd>
+                        <dd>Perform Ajax <code>POST</code> to add a new wine and <code>GET</code> to fetch a list of wines to the console.</dd>
                     </dl>
                     <dl>
                         <dt>Links</dt>
