- use https API url - add OMDB API assignment

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         <dt>Objectives</dt>
                         <dd>Dynamically generate the select list for year field using a JavaScript and jQuery.</dd>
                         <dd>On submit, validate the form and show error messaging for invalid fields.</dd>
-                        <dd>Perform Ajax <code>POST</code> to add a new wine and <code>GET</code> to fetch a list of wines to the console.</dd>
+                        <dd>Perform jQuery/Ajax <code>POST</code> to add a new wine and <code>GET</code> to fetch a list of wines to the console.</dd>
                     </dl>
                     <dl>
                         <dt>Links</dt>
@@ -261,11 +261,12 @@
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Open Music Database (OMDB) API Search</h4>
-                    <p>Stuff about project.</p>
+                    <p>Using jQuery/Ajax, build a simple form to query the <a href="http://www.omdbapi.com/" name="" target="_blank">OMDB API</a> by title and display the result.</p>
                     <dl>
                         <dt>Objectives</dt>
-                        <dd></dd>
-                        <dd></dd>
+                        <dd>Perform asynchronous jQuery/Ajax request to API endpoint.</dd>
+                        <dd>Include a button to clear form input using jQuery.</dd>
+                        <dd>Display results with simple Handlebars template.</dd>
                     </dl>
                     <dl>
                         <dt>Links</dt>
