--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         <dt>Objectives</dt>
                         <dd>Dynamically generate the select list for year field using a JavaScript and jQuery.</dd>
                         <dd>On submit, validate the form and show error messaging for invalid fields.</dd>
-                        <dd>Perform jQuery/Ajax <code>POST</code> to add a new wine and <code>GET</code> to fetch a list of wines to the console.</dd>
+                        <dd>Send jQuery/Ajax <code>POST</code> to add a new wine and <code>GET</code> to fetch a list of wines to the console.</dd>
                     </dl>
                     <dl>
                         <dt>Links</dt>
@@ -260,13 +260,14 @@
                     <a href="/ga-fewd35/11-omdb_api_search/" target="_blank"><img src="img/ga-fewd35/11-omdb_api_search.png" class="shadow"></a>
                 </div>
                 <div class="col-sm-7 border">
-                    <h4>Open Music Database (OMDB) API Search</h4>
+                    <h4>Open Music Database API Search</h4>
                     <p>Using jQuery/Ajax, build a simple form to query the <a href="http://www.omdbapi.com/" name="" target="_blank">OMDB API</a> by title and display the result.</p>
                     <dl>
                         <dt>Objectives</dt>
-                        <dd>Perform asynchronous jQuery/Ajax request to API endpoint.</dd>
+                        <dd>Send jQuery/Ajax <code>GET</code> request to API.</dd>
                         <dd>Include a button to clear form input using jQuery.</dd>
                         <dd>Display results with simple Handlebars template.</dd>
+                        <dd>Show messaging if search returns zero results.</dd>
                     </dl>
                     <dl>
                         <dt>Links</dt>
@@ -286,8 +287,10 @@
                     <p>Using jQuery/Ajax, query the <a href="https://developer.spotify.com/web-api/" target="_blank">Spotify Web API</a> by keyword and return related tracks.</p>
                     <dl>
                         <dt>Objectives</dt>
+                        <dd>Send jQuery/Ajax <code>GET</code> request to API.</dd>
                         <dd>Display results with simple Handlebars template.</dd>
-                        <dd>Paginate through results using JavaScript.</dd>
+                        <dd>Show messaging if search returns zero results.</dd>
+                        <dd>Paginate results using JavaScript.</dd>
                         <dd>Enable in-browser audio preview using HTML5.</dd>
                     </dl>
                     <dl>
