- add wish list assignment

--- a/index.html
+++ b/index.html
@@ -170,11 +170,13 @@
                 </div>
                 <div class="col-sm-7 border">
                     <h4>Amazon Wish List</h4>
-                    <p>Stuff about project.</p>
+                    <p>Using Bootstrap components and CSS, transform the layout of an <a href="http://damonsauve.github.io/ga-fewd35/07-amazon_wish_list/index-old.html" name="" target="_blank">existing web page</a>.</p>
                     <dl>
                         <dt>Objectives</dt>
-                        <dd></dd>
-                        <dd></dd>
+                        <dd>Two-column layout degrades to one column for small screens.</dd>
+                        <dd>Tool tips provide contextual link info.</dd>
+                        <dd>Product comments displayed in modal window.</dd>
+                        <dd>Hide Carousel button.</dd>
                     </dl>
                     <dl>
                         <dt>Links</dt>
