- tweak to text

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <dd>Two-column layout degrades to one column for small screens.</dd>
                         <dd>Tool tips provide contextual link info.</dd>
                         <dd>Product comments displayed in modal window.</dd>
-                        <dd>Hide Carousel button.</dd>
+                        <dd>"Hide Carousel" button uses Collapse plugin.</dd>
                     </dl>
                     <dl>
                         <dt>Links</dt>
