new col sizes for sm and md screens.

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <div class="row">
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-sm-5 border">
+                <div class="col-sm-4 col-md-5 border">
                     <a href="/projects/ga-fewd35/01-resume_exercise/" target="_blank"><img src="img/ga-fewd35/01-resume_exercise.png" class="shadow"></a>
                 </div>
-                <div class="col-sm-7 border">
+                <div class="col-sm-8 col-md-7 border">
                     <h4>Resume Exercise</h4>
                     <p>From PNG mock-ups, build a two-page resume using HTML and CSS.</p>
                     <dl>
@@ -52,10 +52,10 @@
         </div>
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-sm-5 border">
+                <div class="col-sm-4 col-md-5 border">
                     <a href="/projects/ga-fewd35/02-fashion_blog/" target="_blank"><img src="img/ga-fewd35/02-fashion_blog.png" class="shadow"></a>
                 </div>
-                <div class="col-sm-7 border">
+                <div class="col-sm-8 col-md-7 border">
                     <h4>Fashion Blog</h4>
                     <p>From a PNG mock-up, build a one-page blog using a 12-column grid system.</p>
                     <dl>
@@ -76,10 +76,10 @@
     <div class="row">
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-sm-5 border">
+                <div class="col-sm-4 col-md-5 border">
                     <a href="/projects/ga-fewd35/03-bootstrap_off_canvas_clone/" target="_blank"><img src="img/ga-fewd35/03-bootstrap_off_canvas_clone.png" class="shadow"></a>
                 </div>
-                <div class="col-sm-7 border">
+                <div class="col-sm-8 col-md-7 border">
                     <h4>Bootstrap Off-Canvas Clone</h4>
                     <p>Clone the Bootstrap <a href ="http://getbootstrap.com/examples/offcanvas/">Off-Canvas Template</a>.
                     Exercise does not include the JavaScript to toggle the sidebar.</p>
@@ -98,10 +98,10 @@
         </div>
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-sm-5 border">
+                <div class="col-sm-4 col-md-5 border">
                     <a href="/projects/ga-fewd35/04-score_keeper/" target="_blank"><img src="img/ga-fewd35/04-score_keeper.png" class="shadow"></a>
                 </div>
-                <div class="col-sm-7 border">
+                <div class="col-sm-8 col-md-7 border">
                     <h4>Score Keeper</h4>
                     <p>Create a simple score-keeper application using JavaScript.</p>
                     <dl>
@@ -121,10 +121,10 @@
     <div class="row">
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-sm-5 border">
+                <div class="col-sm-4 col-md-5 border">
                     <a href="/projects/ga-fewd35/05-tic_tac_toe/" target="_blank"><img src="img/ga-fewd35/05-tic_tac_toe.png" class="shadow"></a>
                 </div>
-                <div class="col-sm-7 border">
+                <div class="col-sm-8 col-md-7 border">
                     <h4>Tic Tac Toe</h4>
                     <p>Build a tic-tac-toe game from scratch using HTML, CSS, and jQuery.</p>
                     <dl>
@@ -142,10 +142,10 @@
         </div>
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-sm-5 border">
+                <div class="col-sm-4 col-md-5 border">
                     <a href="/projects/ga-fewd35/06-divided_times/" target="_blank"><img src="img/ga-fewd35/06-divided_times.png" class="shadow"></a>
                 </div>
-                <div class="col-sm-7 border">
+                <div class="col-sm-8 col-md-7 border">
                     <h4>Divided Times</h4>
                     <p>Using jQuery, build a drop-down navigation menu for a newspaper website.</p>
                     <dl>
@@ -165,10 +165,10 @@
     <div class="row">
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-sm-5 border">
+                <div class="col-sm-4 col-md-5 border">
                     <a href="/projects/ga-fewd35/07-amazon_wish_list/" target="_blank"><img src="img/ga-fewd35/07-amazon_wish_list.png" class="shadow"></a>
                 </div>
-                <div class="col-sm-7 border">
+                <div class="col-sm-8 col-md-7 border">
                     <h4>Amazon Wish List</h4>
                     <p>Using Bootstrap components and CSS, transform the layout of an <a href="http://damonsauve.github.io/ga-fewd35/07-amazon_wish_list/index-old.html" name="" target="_blank">existing web page</a>.</p>
                     <dl>
@@ -188,10 +188,10 @@
         </div>
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-sm-5 border">
+                <div class="col-sm-4 col-md-5 border">
                     <a href="/projects/ga-fewd35/08-responsive_header_redesign/" target="_blank"><img src="img/ga-fewd35/08-responsive_header_redesign.png" class="shadow"></a>
                 </div>
-                <div class="col-sm-7 border">
+                <div class="col-sm-8 col-md-7 border">
                     <h4>Responsive Header Redesign</h4>
                     <p>Using jQuery, transform existing navigation menu for mobile devices.</p>
                     <dl>
@@ -211,10 +211,10 @@
     <div class="row">
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-sm-5 border">
+                <div class="col-sm-4 col-md-5 border">
                     <a href="/projects/ga-fewd35/09-my_form/" target="_blank"><img src="img/ga-fewd35/09-my_form.png" class="shadow"></a>
                 </div>
-                <div class="col-sm-7 border">
+                <div class="col-sm-8 col-md-7 border">
                     <h4>My Form</h4>
                     <p>Build simple HTML form from PNG mock-up with basic field validation.</p>
                     <dl>
@@ -234,10 +234,10 @@
         </div>
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-sm-5 border">
+                <div class="col-sm-4 col-md-5 border">
                     <a href="/projects/ga-fewd35/10-wine_api_app/" target="_blank"><img src="img/ga-fewd35/10-wine_api_app.png" class="shadow"></a>
                 </div>
-                <div class="col-sm-7 border">
+                <div class="col-sm-8 col-md-7 border">
                     <h4>Wine API App</h4>
                     <p>Using jQuery/Ajax, use the Wine API to add a new wine to the database. Note: As of February 2016, the Wine API was inaccessible.</p>
                     <dl>
@@ -258,10 +258,10 @@
     <div class="row">
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-sm-5 border">
+                <div class="col-sm-4 col-md-5 border">
                     <a href="/projects/ga-fewd35/11-omdb_api_search/" target="_blank"><img src="img/ga-fewd35/11-omdb_api_search.png" class="shadow"></a>
                 </div>
-                <div class="col-sm-7 border">
+                <div class="col-sm-8 col-md-7 border">
                     <h4>Open Music Database API Search</h4>
                     <p>Using jQuery/Ajax, build a simple form to query the <a href="http://www.omdbapi.com/" name="" target="_blank">OMDB API</a> by title and display the result.</p>
                     <dl>
@@ -281,10 +281,10 @@
         </div>
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-sm-5 border">
+                <div class="col-sm-4 col-md-5 border">
                     <a href="/projects/ga-fewd35/12-spotify_api_search/" target="_blank"><img src="img/ga-fewd35/12-spotify_api_search.png" class="shadow"></a>
                 </div>
-                <div class="col-sm-7 border">
+                <div class="col-sm-8 col-md-7 border">
                     <h4>Spotify API Search</h4>
                     <p>Using jQuery/Ajax, query the <a href="https://developer.spotify.com/web-api/" target="_blank">Spotify Web API</a> by keyword and return related tracks.</p>
                     <dl>
