- remove bg color for debugging media queries

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Web Portfolio | Damon Sauve</title>
+    <title>Web Work Portfolio | Damon Sauve</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
@@ -14,7 +14,7 @@
 
     <div class="row">
         <div class="col-md-12 level-1 border">
-            <h2>Web Portfolio</h2>
+            <h2>Web Work Portfolio</h2>
             <h3>Damon Sauve</h3>
         </div>
     </div>
@@ -306,8 +306,11 @@
     </div>
 
     <div class="row">
-        <div class="col-md-12 level-1 footer-row">
-            damonsauve @ GitHub: <a href="https://github.com/damonsauve/damonsauve.github.io">Pages Repo</a> | <a href="https://github.com/damonsauve">Main Repos</a>
+        <div class="col-md-6 level-1 footer-row">
+            <a href="https://github.com/damonsauve/damonsauve.github.io">GitHub Pages</a> | <a href="https://github.com/damonsauve">GitHub Main</a>
+        </div>
+        <div class="col-md-6 level-1 footer-row">
+            <div class="text-right">&copy; 2016 damonsauve</div>
         </div>
     </div>
 
