--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/12-spotify_api_search" target="_blank">GitHub Code</a>
-                        <dd><a href="/projects/ga-fewd35/12-spotify_api_search/" target="_blank">Live Version</a></dd>
+                        | <a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/12-spotify_api_search" target="_blank">GitHub Code</a>
+                      | d><a href="/projects/ga-fewd35/12-spotify_api_search/" target="_blank">Live Version</a></dd>
                     </dl>
                 </div>
             </div>
@@ -306,11 +306,12 @@
     </div>
 
     <div class="row">
-        <div class="col-md-6 level-1 footer-row">
-            <a href="https://github.com/damonsauve/damonsauve.github.io">GitHub Pages</a> | <a href="https://github.com/damonsauve">GitHub Main</a>
-        </div>
-        <div class="col-md-6 level-1 footer-row">
-            <div class="text-right">&copy; 2016 damonsauve</div>
+        <div class="col-md-12 level-1 footer-row">
+                <p>&copy; 2016 Damon Sauve</p>
+                <a href="https://github.com/damonsauve/damonsauve.github.io" target="_blank">GitHub Pages</a> |
+                <a href="https://github.com/damonsauve" target="_blank">GitHub Main</a> |
+                <a href="https://www.linkedin.com/in/damonsauve" target="_blank">LinkedIn</a>
+            </dl>
         </div>
     </div>
 
