--- a/index.html
+++ b/index.html
@@ -308,8 +308,7 @@
     <div class="row">
         <div class="col-md-12 level-1 footer-row">
                 <p>&copy; 2016 Damon Sauve</p>
-                <a href="https://github.com/damonsauve/damonsauve.github.io" target="_blank">GitHub Pages</a> |
-                <a href="https://github.com/damonsauve" target="_blank">GitHub Main</a> |
+                <a href="https://github.com/damonsauve" target="_blank">GitHub</a> |
                 <a href="https://www.linkedin.com/in/damonsauve" target="_blank">LinkedIn</a>
             </dl>
         </div>
