--- a/index.html
+++ b/index.html
@@ -321,6 +321,9 @@
 
 </div>
 
+<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.3/handlebars.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
